@@ -169,6 +169,17 @@ Details	   : When osc reconnect to OST, OST(filter)should clear grant info of
 	     these of resend/replay write req.
 
 Severity   : normal
+Frequency  : rare 
+Bugzilla   : 11662
+Description: Grant space more than avaiable left space sometimes.
+Details	   : When then OST is about to be full, if two bulk writing from
+	     different clients came to OST. Accord the avaliable space of the
+	     OST, the first req should be permitted, and the second one
+	     should be denied by ENOSPC. But if the seconde arrived before 
+	     the first one is commited. The OST might wrongly permit second
+	     writing, which will cause grant space > avaiable space.
+
+Severity   : normal
 Frequency  : when client is evicted 
 Bugzilla   : 12371
 Description: Grant might be wrongly erased when osc is evicted by OST
@@ -911,7 +922,6 @@ Description: lustre write performance loss in the SLES10 kernel
 Details    : the performance loss is caused by using of write barriers in the
 	     ext3 code. The SLES10 kernel turns barrier support on by
 	     default. The fix is to undo that change for ldiskfs.
-
 
 ------------------------------------------------------------------------------
 
